nlamah/src/main/resources/org/nlamah/QL/test/error/identifierTypeMismatch1.ql
form test
{
	question1 number "test1"
	
	if (question1)
	{
	}
	endif
	
	question2 boolean "test2"
	
	question3 number "test3" question2
}